//Copyright 2019 iwanvi.com All right reserved.
syntax = "proto2";

package com.iwanvi.minerva.proto;

import "common.proto";

option java_package = "com.iwanvi.nvwa.proto";
option java_outer_classname = "NotifyMsgProto";

enum OpType {
	kAdd = 1;
	kModify = 2;
	kDelete = 3;
	kPing = 4;
}

message NotifyMsg {
	optional EntityType entity_type = 1;
	optional uint32 entity_id = 2;
	optional OpType op_type = 3;
	optional string file_name = 4;
}